Added Table of Agg. Info and Paragraph about it. -Sid

--- a/index.html
+++ b/index.html
@@ -199,9 +199,67 @@ $(document).ready(function () {
 
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
-<p>How has Rolling Stones seen music change between 1955 and 2011 in the United States? We will be looking at thier list to the Top 500 greatest Albums from that time period, diving in and anazlyzing their rankings. Our data is driven by information found on Kaggle’s <em><a href="https://www.kaggle.com/notgibs/500-greatest-albums-of-all-time-rolling-stone">Rolling Stone’s 500 Greatest Albums of All Time</a></em>. Through various charts and graphs, we will be looking at how album popularity has changed over time, how many albums a year on average make the Top 500, and which genres appeared most often in the Top 500.</p>
+<p>How has Rolling Stones seen music change between 1955 and 2011 in the United States? We will be looking at their list of the Top 500 greatest Albums from that time period, diving in and anazlyzing their rankings. Our data is driven by information found on Kaggle’s <em><a href="https://www.kaggle.com/notgibs/500-greatest-albums-of-all-time-rolling-stone">Rolling Stone’s 500 Greatest Albums of All Time</a></em>. Through various charts and graphs, we will be looking at how album popularity has changed over time, how many albums a year on average make the Top 500, and which genres appeared most often in the Top 500.</p>
 <p>Rolling Stone is an American magazine that focuses on popular culture in regards to music, film, TV, and politics. And much of their content has been influential not to its viewers but to critics as well. Click <a href="https://en.wikipedia.org/wiki/Rolling_Stone">here</a> to read more about <em>Rolling Stones Magazine</em>.</p>
 <p>Specifically, our data is about an opinionated poll, by critical music figures, of the greatest 500 albums from 1955 to 2011, with information regarding an individual album. It’s important to note that the data is constricted to just the years of <strong>1955 to 2011</strong>.</p>
+</div>
+<div id="music-through-the-decades" class="section level2">
+<h2>Music Through the Decades</h2>
+<p>The following chart reveals popular music trends through the decades. Specifically, we wanted to see what decade had the highest average rank and who was the most popular artist from each decade. From this table, the biggest observation is that the average rank of albums in each decade gets higher as time goes on, meaning that older albums are considered more popular than recent music. However, more albums made the Top 500 in the 1970’s (186 albums), even if they were not as highly ranked as some of the other decades.</p>
+<table>
+<thead>
+<tr class="header">
+<th align="right">Decade</th>
+<th align="right">Total Albums</th>
+<th align="right">Average Song Rank</th>
+<th align="left">Most Popular Artist(s)</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">1950</td>
+<td align="right">10</td>
+<td align="right">171.70</td>
+<td align="left">Frank Sinatra</td>
+</tr>
+<tr class="even">
+<td align="right">1960</td>
+<td align="right">105</td>
+<td align="right">181.73</td>
+<td align="left">The Beatles</td>
+</tr>
+<tr class="odd">
+<td align="right">1970</td>
+<td align="right">186</td>
+<td align="right">243.41</td>
+<td align="left">David Bowie, Elton John</td>
+</tr>
+<tr class="even">
+<td align="right">1980</td>
+<td align="right">85</td>
+<td align="right">281.60</td>
+<td align="left">Bruce Springsteen, The Smiths</td>
+</tr>
+<tr class="odd">
+<td align="right">1990</td>
+<td align="right">72</td>
+<td align="right">293.69</td>
+<td align="left">Nirvana</td>
+</tr>
+<tr class="even">
+<td align="right">2000</td>
+<td align="right">40</td>
+<td align="right">334.00</td>
+<td align="left">Radiohead</td>
+</tr>
+<tr class="odd">
+<td align="right">2010</td>
+<td align="right">2</td>
+<td align="right">367.00</td>
+<td align="left">Kanye West, The Beach Boys</td>
+</tr>
+</tbody>
+</table>
 </div>
 
 
