--- a/index.html
+++ b/index.html
@@ -216,54 +216,54 @@ $(document).ready(function () {
 <table>
 <thead>
 <tr class="header">
-<th align="right">Decade</th>
-<th align="right">Total Albums</th>
-<th align="right">Average Song Rank</th>
-<th align="left">Most Popular Artist(s)</th>
+<th align="center">Decade</th>
+<th align="center">Total Albums</th>
+<th align="center">Average Song Rank</th>
+<th align="center">Most Popular Artist(s)</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="right">1950</td>
-<td align="right">10</td>
-<td align="right">171.70</td>
-<td align="left">Frank Sinatra</td>
+<td align="center">1950</td>
+<td align="center">10</td>
+<td align="center">171.70</td>
+<td align="center">Frank Sinatra</td>
 </tr>
 <tr class="even">
-<td align="right">1960</td>
-<td align="right">105</td>
-<td align="right">181.73</td>
-<td align="left">The Beatles</td>
+<td align="center">1960</td>
+<td align="center">105</td>
+<td align="center">181.73</td>
+<td align="center">The Beatles</td>
 </tr>
 <tr class="odd">
-<td align="right">1970</td>
-<td align="right">186</td>
-<td align="right">243.41</td>
-<td align="left">David Bowie, Elton John</td>
+<td align="center">1970</td>
+<td align="center">186</td>
+<td align="center">243.41</td>
+<td align="center">David Bowie, Elton John</td>
 </tr>
 <tr class="even">
-<td align="right">1980</td>
-<td align="right">85</td>
-<td align="right">281.60</td>
-<td align="left">Bruce Springsteen, The Smiths</td>
+<td align="center">1980</td>
+<td align="center">85</td>
+<td align="center">281.60</td>
+<td align="center">Bruce Springsteen, The Smiths</td>
 </tr>
 <tr class="odd">
-<td align="right">1990</td>
-<td align="right">72</td>
-<td align="right">293.69</td>
-<td align="left">Nirvana</td>
+<td align="center">1990</td>
+<td align="center">72</td>
+<td align="center">293.69</td>
+<td align="center">Nirvana</td>
 </tr>
 <tr class="even">
-<td align="right">2000</td>
-<td align="right">40</td>
-<td align="right">334.00</td>
-<td align="left">Radiohead</td>
+<td align="center">2000</td>
+<td align="center">40</td>
+<td align="center">334.00</td>
+<td align="center">Radiohead</td>
 </tr>
 <tr class="odd">
-<td align="right">2010</td>
-<td align="right">2</td>
-<td align="right">367.00</td>
-<td align="left">Kanye West, The Beach Boys</td>
+<td align="center">2010</td>
+<td align="center">2</td>
+<td align="center">367.00</td>
+<td align="center">Kanye West, The Beach Boys</td>
 </tr>
 </tbody>
 </table>
