Add more to Summary Info Paragraph

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ $(document).ready(function () {
 
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
-<p>How has Rolling Stones seen music change between 1955 and 2011 in the United States? We will be looking at their list of the Top 500 greatest Albums from that time period, diving in and anazlyzing their rankings. Our data is driven by information found on Kaggle’s <em><a href="https://www.kaggle.com/notgibs/500-greatest-albums-of-all-time-rolling-stone">Rolling Stone’s 500 Greatest Albums of All Time</a></em>. Through various charts and graphs, we will be looking at how album popularity has changed over time, how many albums a year on average make the Top 500, and which genres appeared most often in the Top 500.</p>
+<p>How has Rolling Stones seen music change between 1955 and 2011 in the United States? We will be looking at their list of the <em>Top 500 Greatest Albums</em> from that time period, diving in and anazlyzing their rankings. Our data is driven by information found on Kaggle’s <em><a href="https://www.kaggle.com/notgibs/500-greatest-albums-of-all-time-rolling-stone">Rolling Stone’s 500 Greatest Albums of All Time</a></em>. Through various charts and graphs, we will be looking at how album popularity has changed over time, how many albums a year on average make the Top 500, and which genres appeared most often in the Top 500.</p>
 <div id="our-data" class="section level3">
 <h3>Our Data</h3>
 <p>Rolling Stone is an American magazine that focuses on popular culture in regards to music, film, TV, and politics. And much of their content has been influential not to its viewers but to critics as well. Click <a href="https://en.wikipedia.org/wiki/Rolling_Stone">here</a> to read more about <em>Rolling Stones Magazine</em>.</p>
@@ -208,7 +208,7 @@ $(document).ready(function () {
 </div>
 <div id="honorable-mentions" class="section level2">
 <h2>Honorable Mentions</h2>
-<p>According to Rolling Stone, the greatest album of all time was <strong>Sgt. Pepper’s Lonely Hearts Club Band</strong> by <em>The Beatles</em>. The year with the most albums in the Top 500 was 1970 while the most common artists were <em>Bob Dylan, The Beatles, The Rolling Stones</em>. Recent albums have had a hard time making their way on this list. However, the most recent album to make it on to the Top 500 was <strong>The Smile Sessions</strong>.</p>
+<p>According to Rolling Stone, the greatest album of all time was <strong>Sgt. Pepper’s Lonely Hearts Club Band</strong>, which was released in 1967 by <em>The Beatles</em>. The year with the most albums in the Top 500 was 1970 while the most common artists were <em>Bob Dylan, The Beatles, The Rolling Stones</em>. Recent albums have had a hard time making their way on this list. However, the most recent album to make it on to the Top 500 was <strong>The Smile Sessions</strong>, which was released in 2011 by <em>The Beach Boys</em>.</p>
 </div>
 <div id="music-through-the-decades" class="section level2">
 <h2>Music Through the Decades</h2>
