--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@ h6 {
 </style>
 
 
+</head>
 
+<body>
 
 <style type="text/css">
 .main-container {
@@ -102,6 +104,8 @@ summary {
 </style>
 
 
+
+<div class="container-fluid main-container">
 
 <!-- tabsets -->
 
@@ -176,30 +180,21 @@ $(document).ready(function () {
 
 
 
-</head>
-
-<body>
-
-
-<div class="container-fluid main-container">
-
-
-
 
 <div class="fluid-row" id="header">
 
 
 
 <h1 class="title toc-ignore">Rock &amp; Rollin’ Through The History of Music</h1>
-<h4 class="author">The Purple Wranglers</h4>
-<h4 class="date">May 21, 2019</h4>
+<h4 class="author"><em>The Purple Wranglers</em></h4>
+<h4 class="date"><em>May 21, 2019</em></h4>
 
 </div>
 
 
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
-<p>How has Rolling Stones seen music change between 1955 and 2011 in the United States? We will be looking at their list of the Top 500 greatest Albums from that time period, diving in and anazlyzing their rankings. Our data is driven by information found on Kaggle’s <em><a href="https://www.kaggle.com/notgibs/500-greatest-albums-of-all-time-rolling-stone">Rolling Stone’s 500 Greatest Albums of All Time</a></em>. Through various charts and graphs, we will be looking at how album popularity has changed over time, how many albums a year on average make the Top 500, and which genres appeared most often in the Top 500.</p>
+<p>How has Rolling Stones seen music change between 1955 and 2011 in the United States? We will be looking at their list of the <em>Top 500 Greatest Albums</em> from that time period, diving in and anazlyzing their rankings. Our data is driven by information found on Kaggle’s <em><a href="https://www.kaggle.com/notgibs/500-greatest-albums-of-all-time-rolling-stone">Rolling Stone’s 500 Greatest Albums of All Time</a></em>. Through various charts and graphs, we will be looking at how album popularity has changed over time, how many albums a year on average make the Top 500, and which genres appeared most often in the Top 500.</p>
 <div id="our-data" class="section level3">
 <h3>Our Data</h3>
 <p>Rolling Stone is an American magazine that focuses on popular culture in regards to music, film, TV, and politics. And much of their content has been influential not to its viewers but to critics as well. Click <a href="https://en.wikipedia.org/wiki/Rolling_Stone">here</a> to read more about <em>Rolling Stones Magazine</em>.</p>
